# First_RAG

./: .gitignore  README.md  pyproject.toml
Notebook/: document.ipynb
Simple_Rag/: Generation.py  cosine.py  dataset.py  rag.py  vector.py
