[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "pandas>=3.0.3",
    "pymupdf",
    "pypdf",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "transformers>=5.10.1",
    "typesense>=2.0.0",
]
